wip: added product state
